[package]
name = "khamoshchat-broker"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = {version= "0.25.1", features = ["use-rustls"]}
rustls = "0.23.36"
rustls-native-certs = "0.8.3"
serde = {version= "1.0.228", features=["derive"]}
serde_json = "1.0.149"
tokio = {version= "1.49.0", features = ["rt-multi-thread"]}
