[package]
name = "khamoshchat-broker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
env_logger = "0.11"
log = "0.4"
rmqtt = { version = "0.18", features = ["default", "plugin"] }
rmqtt-macros = "0.1.1"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }
